2015-07-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, ac/withenable.ac, configure.ac, dvipdfmx.c,
	xbb.c: Only one binary and a symlink dvipdfmx->xdvipdfmx.
	* ac/dvipdfm-x.ac (removed): Obsolete configure options.
	* dvipdfm*.test (removed): Obsolete tests.
	* tests/img*.{bb,bbx} (removed): Obsolete test data.

2015-07-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Make dvipdfmx and xdvipdfmx essentially the same.
	* dvicodes.h: Slightly reformat.
	* dvi.c: Run-time decision to hanlde XeTeX extensions only for
	id_byte 6 and Ascii pTeX extension only for post_id_byte 3.
	* pdfdev.c: Remove '#ifdef XETEX' (one probably a mistake).
	* pdfdoc.c: New artbox handling only for XDV files (from XeTeX).
	* system.h: Drop redundant #include <kpathsea/c-auto.h>.

2015-07-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfdoc.c: Somewhat simplify to avoid compiler warnings.

2015-07-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* epdf.c. pdfdoc.c, pdfobj.h, pdfximage.c, spc_pdfm.c, spc_util.c, xbb.c:
	Support pagebox=artbox etc. in PDF inclusion. It works with a new
	dvipdfmx.def. Thanks Y. Terada.

2015-07-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* epdf.c, pdfobj.c: Try to embed a PDF image, even if the PDF version
	is newer than the setting.

2015-07-08  Simon Cozens  <simon@simon-cozens.org>

	* pngimage.c: Fixed a typo "XObjcect" => "XObject".

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.
	* ac/dvipdfm-x.ac: Fixed a typo.
	* xdvipdfmx.test: Fixed a typo.

2015-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dpxcrypt.c: Bugfix: Replace byte => uint8_t.
	* dpxcrypt.[ch]: Replace u{8,32,64} => uint{8,32,64}_t.
	* pdfencrypt.c: Declare pdf_enc_init() as static.
	drop useless cast (const char *) => (char *).
	* unicode.h: Drop unnecessary #include <inttypes.h>.

2015-07-04  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* jpegimage.c: Use size_t, uint32_t,... instead of short/long int.