@@ -1,0 +1,25 @@
+#! /bin/sh
+
+# Copyright (C) 2015 Peter Breitenlohner <tex-live@tug.org>
+# You may freely use, modify and/or distribute this file.
+
+TEXMFCNF=$srcdir/../kpathsea
+TFMFONTS="$srcdir/tests;$srcdir/data"
+T1FONTS="$srcdir/tests;$srcdir/data"
+TEXFONTMAPS="$srcdir/tests;$srcdir/data"
+DVIPDFMXINPUTS="$srcdir/tests;$srcdir/data"
+TEXPICTS=$srcdir/tests
+export TEXMFCNF TFMFONTS T1FONTS TEXFONTMAPS DVIPDFMXINPUTS TEXPICTS
+
+failed=
+
+echo "*** xdvipdfmx -v -z0 -o reverse.pdf reverse" && echo \
+	&& ./xdvipdfmx -v -z0 -o reverse.pdf $srcdir/tests/reverse \
+	&& echo && echo "xdvipdfmx-reverse tests OK" && echo \
+	|| failed="$failed xdvipdfmx-reverse"	
+
+test -z "$failed" && exit 0
+echo
+echo "failed tests:$failed"
+exit 1
+
